feat: additional test cases